# api-registry

./: .env  .gitignore  .spectral.mjs  .spectral.yaml  .stoplight.json  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  buf.gen.local.yaml  buf.gen.opt.yaml  buf.gen.yaml  buf.work.yaml  build.gradle  index.js  main.java  package.json  settings.gradle
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: buf-gen.yaml  build.yaml  openapi-build.yaml  proto-build.yaml  proto-сhecks.yaml  pull-request.yaml
api/openapi/: API-Keys.yaml  README.md  Users.yaml  activities.yaml  api-keys.yaml  gitlab-plugin.json  gitlab-plugin.yaml  organizations.yaml  reportportal-api.yaml  reportportal.yaml  users.yaml
api/openapi/apis/: _info.yaml  activities.yaml  groups.yaml  launches.yaml  organizations.yaml  plugins.yaml  projects.yaml  reportportal.yaml  users.yaml
api/openapi/bundles/: organizations.yaml  reportportal.yaml
api/openapi/endpoints/: users.yaml
api/openapi/enums/: accountType.yaml  contextScope.yaml  filterOperation.yaml  instanceRole.yaml  invitationStatus.yaml  operationType.yaml  order.yaml  orgRole.yaml  orgType.yaml  patchOperation.yaml  projectRole.yaml  searchOperator.yaml  timeUnit.yaml
api/openapi/models/: Error.yaml  EventStatus.yaml  Limit.yaml  Link.yaml  Links.yaml  Multistatus.yaml  Offset-Pagination.yaml  Offset.yaml  OffsetPagination.yaml  OffsetRequest.yaml  Password.yaml  PatchOpObject.yaml  PatchOperation.yaml  PatchOperationList.yaml  PatchOperationString.yaml  Problem.yaml  Relationships.yaml  SearchCriteria.yaml  SearchCriteriaList.yaml  SearchCriteriaRQ.yaml  Slug.yaml  activity.yaml  apiKey.yaml  hypermedia-link.yaml  hypermedia.yaml  limit.yaml  offset.yaml  offsetPagination.yaml  password-type.yaml  searchCriteria.yaml
api/openapi/models/group/: Group.yaml  GroupBase.yaml  GroupInfo.yaml
api/openapi/models/notify-actions/: ExecuteScript.yaml  Log.yaml  NotifyMobileApp.yaml  SendEmail.yaml  SendSms.yaml  TriggerWebhook.yaml  (+1 more)
api/openapi/parameters/: ExcludeFields.yaml  GroupId.yaml  Limit.yaml  Offset.yaml  Order.yaml  OrgId.yaml  Pagination.yaml  ProjectId.yaml  UserId.yaml
api/openapi/security/: BearerAuth.yaml
api/openapi/types/: id.yaml  identifier.yaml  name.yaml  password.yaml  slug.yaml  userId.yaml
api/proto/: buf.yaml
api/tms/: testCaseApi_openapi.yaml  testCaseAttachment_openapi.yaml
apis/: buf.md  buf.yaml
apis/openapi/: Users-3.0.yaml  Users-3.1.yaml  administration.yaml  quality-gate.yaml  reporting.yaml  users-3.0.yaml  users-3.1.yaml  users.yaml
apis/openapi/models/: Error.yaml  Offset-Pagination.yaml  offset-pagination.yaml
apis/proto/: buf.yaml
apis/proto/google/: README.md
docs/: API-Guideline.md  API-first.md  Concept.md  api-errors.md  api-guidelines.md  guidelines.md  index.html  model.puml  principles.md  rust.md
docs/organizations/: orgnizations.puml
docs/reporting/: model.puml
docs/web/: all.html  branches.js  dev.html  main.html  org.html  ref.html  styles.css  users.html
src/: build.rs  index.js  lib.rs
src/openapi/models/: Offset-Pagination.yaml
templates/: buf.gen.local.yaml  buf.gen.opt.yaml  buf.gen.rust.yaml
vendors/: buf.yaml
web/: index.html  org.html
(+63 files in other folders)
