[package]
# Meta description
name = "reportportal_common_api"
authors = [
    "ReportPortal Team <support@reportportal.io>", 
    "Reingold Shekhtel <Reingold_Shekhtel@epam.com>"
]
version = "0.1.0"
edition = "2021"
description = "A client and server bindings library for ReportPortal gRPC. Attention: This library is still in development!"
homepage = "https://reportportal.io"
repository = "https://github.com/reportportal/reportportal-common-api"
license = "Apache-2.0"
keywords = ["reportportal", "test", "reporting", "api", "grpc"]
categories = ["api-bindings"]

# Build settings
build = "./src/build.rs"
exclude = [
    ".github",
    ".spectral.yaml",
    ".stoplight.json",
    "docs",
    "src/index.js",
    "templates",
    "gradl*",
    "*.gradle",
    "buf.*",   
    "package.json"
]

[dependencies]
bytes = "1.4.0"
prost = "0.11.6"
prost-types = "0.11.6"
# pbjson = "0.5.1"
# pbjson-types ="0.5.1"
# serde = "1.0.152"
# tonic = { version = "0.8.3", features = ["gzip"] }
# google-api-proto = { version = "1", features = ["google-spanner-admin-database-v1"] }

[build-dependencies]
prost-build = { version = "0.11.6"}