[package]
# Meta description
name = "reportportal_common_api"
authors = [
    "ReportPortal Team <support@reportportal.io>", 
    "Reingold Shekhtel <raikbitters@gmail.com>"
]
version = "0.2.0"
edition = "2021"
description = "A client and server bindings library for ReportPortal gRPC. Attention: This library is still in development!"
homepage = "https://reportportal.io"
repository = "https://github.com/reportportal/reportportal-common-api"
readme = "docs/rust.md"
license = "Apache-2.0"
keywords = ["reportportal", "test", "reporting", "api", "grpc"]
categories = ["api-bindings"]

# Build settings
build = "./src/build.rs"
exclude = [
    ".github",
    ".spectral.yaml",
    ".stoplight.json",
    "docs",
    "src/index.js",
    "templates",
    "gradl*",
    "*.gradle",
    "buf.*",   
    "package.json"
]

[dependencies]
# bytes = "1.4.0"
prost = "0.11.6"
prost-types = "0.11.6"
tonic = "0.8.3"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.4"