[package]
# Meta description
name = "reportportal_common_api"
authors = [
    "ReportPortal Team <support@reportportal.io>", 
    "Reingold Shekhtel <raikbitters@gmail.com>"
]
version = "0.2.3"
edition = "2021"
description = "Bindings library for ReportPortal gRPC. Attention: This library is still in development!"
homepage = "https://reportportal.io"
repository = "https://github.com/reportportal/reportportal-common-api"
readme = "docs/rust.md"
license = "Apache-2.0"
keywords = ["reportportal", "test", "reporting", "api", "grpc"]
categories = ["api-bindings"]

# Build settings
build = "./src/build.rs"
include = [
    "/.cargo/config.toml",
    "/LICENSE",
    "/.gitignore",
    "/api",
    "/src/build/proto/rust/",
    "/src/*.rs",
]

[dependencies]
prost = "0.11.6"
prost-types = "0.11.6"
tonic = "0.8.3"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.4"